# giaa-train

./: .editorconfig  .gitignore  .gitmodules  README.md  build_dataset.py  dataset.py  init.sh  pyproject.toml  train.sh  validate.py
.github/workflows/: release.yaml
configs/: PP-OCRv5_mobile_det.yml  PP-OCRv5_mobile_rec.yml
