[project]
name = "giaa-train"
version = "0.1.0"
description = "GIAA OCR 模型炼丹"
authors = [{ name = "ftnfurina", email = "ftnfurina@gmail.com" }]
requires-python = ">=3.13"
readme = "README.md"
dependencies = [
  "albucore>=0.0.24",
  "albumentations>=2.0.8",
  "cython>=3.2.4",
  "lmdb>=1.7.5",
  "numpy>=2.4.1",
  "opencv-contrib-python>=4.13.0.92",
  "opencv-python>=4.13.0.92",
  "packaging>=26.0",
  "pillow>=12.1.0",
  "pyclipper>=1.4.0",
  "pyyaml>=6.0.3",
  "rapidfuzz>=3.14.3",
  "requests>=2.32.5",
  "scikit-image>=0.26.0",
  "setuptools>=82.0.1",
  "shapely>=2.1.2",
  "tqdm>=4.67.3",
]

[project.optional-dependencies]
cpu = ["paddlepaddle==3.1.0"]
gpu = ["paddlepaddle-gpu==3.1.0"]

[tool.uv.sources]
paddlepaddle = { index = "paddlepaddle", extra = "cpu" }
paddlepaddle-gpu = { index = "paddlepaddle-gpu", extra = "gpu" }

[[tool.uv.index]]
explicit = true
name = "paddlepaddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"

[[tool.uv.index]]
explicit = true
name = "paddlepaddle-gpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
